--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <title>Interactive Map</title>
 
-</body>
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+
+   
+   <style>
+      #map {position: absolute; top: 100px; right: 200px; bottom: 100px; left: 200px;}
+    </style>
+  </head>
+  <body>
+    <div id="map">
+      <a href="https://www.maptiler.com" style="position:absolute;left:10px;bottom:10px;z-index:999;"><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"></a>
+    </div>
+    <p><a href="https://www.maptiler.com/copyright/" target="_blank" rel="noopener">&copy; MapTiler</a> <a href="https://www.openstreetmap.org/copyright" target="_blank" rel="noopener">&copy; OpenStreetMap contributors</a></p>
+
+    <script>
+      const key = 'Qhvu3LRHGb890TtuAscd';
+      const map = L.map('map').setView([32.079093840206895, -81.09413036750655], 14);
+      L.tileLayer(`https://api.maptiler.com/maps/streets-v2/{z}/{x}/{y}.png?key=${key}`,{
+        tileSize: 512,
+        zoomOffset: -1,
+        minZoom: 1,
+        attribution: "\u003ca href=\"https://www.maptiler.com/copyright/\" target=\"_blank\"\u003e\u0026copy; MapTiler\u003c/a\u003e \u003ca href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\"\u003e\u0026copy; OpenStreetMap contributors\u003c/a\u003e",
+        crossOrigin: true
+      }).addTo(map);
+
+      
+      // add a circle
+      const circle = L.circle([32.08,-81.09],{
+        color: 'red',
+        fillColor: '#f03',
+        fillOpacity: 0.5,
+        radius: 100
+      }).addTo(map);
+
+      // add a polygon
+      const polygon = L.polygon([
+        [32.0838307447312, -81.09523095992613],
+        [32.08398150364381, -81.08793563834699],
+        [32.08089089623028, -81.0863787099612]
+      ]).addTo(map);
+
+      // add a marker
+      const marker = L.marker([32.079093840206895, -81.09413036750655]).addTo(map);
+
+      // popup function
+      function bindWaterLevelPopup(marker, water_level, filtered_water_level) {
+        marker.bindPopup(
+          `Water Level: ${water_level}<br>Filtered Water Level: ${filtered_water_level}`
+        ).openPopup();
+      }
+
+      fetch('/water_level')
+      .then(response => response.json())
+      .then(data => {
+        if (data.water_level !== undefined) {
+          bindWaterLevelPopup(marker, data.water_level, data.filtered_water_level);
+        } else {
+          console.warn("No water level found");
+        }
+      });
+
+    </script>
+  </body>
 </html>
